--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type"text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type"text/css" href="assets/css/style.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Match The Number</title>
 </head>
 <body>
  <div class="a">  
